--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@aws-amplify/cli": "^10.8.1",
     "@aws-amplify/ui-react": "^4.4.0",
+    "@aws-sdk/client-s3": "^3.295.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
