--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Hello World
 on:
   push:
     branches:
-      - main  # Modifier pour correspondre à la branche souhaitée
+      - master  # Modifier pour correspondre à la branche souhaitée
 
 jobs:
   build:
