--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,6 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Hello World
-      run: echo "Hello, World!"
+      run: echo "Hello, ${{ env.NAME }}!"
+      env:
+        NAME: ${{ secrets.NAME }}
