--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Hello World
-      run: echo "Hello, ${{ env.NAME }}!"
+      run: echo "Hello, $NAME !"
       env:
-        NAME: ${{ variables.NAME }}
+        NAME: Thibaut
