--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,11 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Hello World
+      run: echo "Hello, ${{ env.NAME }}!"
+      env:
+        NAME: '${{ secrets.NAME }}'
+
+    - name: Hello World
       run: echo "Hello, $NAME !"
       env:
         NAME: Thibaut
