--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Hello World
 on:
   push:
     branches:
-      - master  # Modifier pour correspondre à la branche souhaitée
+      - master
 
 jobs:
   build:
@@ -16,10 +16,15 @@ jobs:
     - name: Vérifier l'âge
       run: |
         if [ $AGE -ge 18 ]; then
-          RESULT="Hello, $NOM , tu es majeur !!"
+          export RESULT="Vous êtes majeur"
         else
-          RESULT="Hello, $NOM , tu es mineur !!"
+          export RESULT="Vous êtes mineur"
         fi
       env:
         AGE: 18
+
+    - name: Hello Thibaut
+      run: echo "Hello, $NOM , tu es $RESULT"
+      env:
         NOM: Thibaut
+        RESULT: ${{ env.RESULT }}
