--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,5 @@ jobs:
           AGE: 21
 
       - name: Hello Thibaut
-        run: echo "Hello, $NOM , tu es ${{ steps.age_check.outputs.result }}"
-        env:
-          NOM: Thibaut
+        run: echo "Hello, ${{ env.NAME }} , tu es ${{ steps.age_check.outputs.result }}"
+        env: ${{ secrets.NAME }}
