--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,6 @@ jobs:
           AGE: 21
 
       - name: Hello Thibaut
-        run: echo "Hello, ${{ env.NAME }} , tu es ${{ steps.age_check.outputs.result }}"
+        run: echo "Hello, $NOM , tu es ${{ steps.age_check.outputs.result }}"
         env:
-          NAME: ${{ secrets.NAME }}
+          NOM: Thibaut
