--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - run: |
-        echo PR #${{ github.event.number }} has been merged
+        echo PR #${{ github.event.number }} has been merged for now
 
   close_job:
     if: github.event.pull_request.merged == false
